couple overflow fixes

--- a/src/components/presentational/Staff/staff.module.scss
+++ b/src/components/presentational/Staff/staff.module.scss
@@ -104,7 +104,7 @@
 				padding: 4rem 2rem 2rem;
 				border-radius: 10px;
 				background-color: rgba($color: $color-blue, $alpha: 0.75);
-				overflow: scroll;
+				overflow: auto;
 				p {
 					font-weight: 400;
 					color: white;
