--- a/src/components/sections/Contact/contact.module.scss
+++ b/src/components/sections/Contact/contact.module.scss
@@ -17,7 +17,7 @@
 				opacity: 0;
 
 				.ContactContainer {
-					max-width: 60rem;
+					width: 100%;
 					display: grid;
 					grid-template-columns: 1fr 1fr 1fr;
 					// set the height of the grid sections in accordance with height-sm mixin
@@ -157,6 +157,7 @@
 
 				.MapsContent {
 					@include height-xl;
+					width: 100%;
 					border-radius: 20px;
 					overflow: hidden;
 				}
